Saved Jupyter notebook 'admin's Python notebook_1'

--- a/ipython_notebooks/admin's Python notebook_1.ipynb
+++ b/ipython_notebooks/admin's Python notebook_1.ipynb
@@ -1,116 +1,123 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
+  "metadata": {
+    "creator": "admin",
+    "customFields": {},
+    "kernelspec": {
+      "name": "py-dku-venv-python36",
+      "display_name": "Python (env Python36)",
+      "language": "python"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 2
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython2",
+      "version": "2.7.16"
+    },
+    "tags": [],
+    "hide_input": false,
+    "modifiedBy": "admin"
+  },
+  "nbformat": 4,
+  "nbformat_minor": 1,
+  "cells": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pylab inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import dataiku\n",
-    "from dataiku import pandasutils as pdu\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from dataiku.connector import Connector"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
+      "execution_count": 1,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "%pylab inline"
+      ],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "Populating the interactive namespace from numpy and matplotlib\n"
+        }
+      ]
+    },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on method get_connector_resource in module dataiku.connector.connector:\n",
-      "\n",
-      "get_connector_resource(self) unbound dataiku.connector.connector.Connector method\n",
-      "    You may create a folder DATA_DIR/plugins/dev/<plugin id>/resource/\n",
-      "    to hold resources useful fo your plugin, e.g. data files;\n",
-      "    this method returns the path of this folder.\n",
-      "    \n",
-      "    This resource folder is meant to be read-only, and included in the .zip release of your plugin.\n",
-      "    Do not put resources next to the connector.py or recipe.py.\n",
-      "\n"
-     ]
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "from "
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 2,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "import dataiku\nfrom dataiku import pandasutils as pdu\nimport pandas as pd"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "print(\"hello\")"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 4,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "from dataiku.connector import Connector"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 6,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "help(Connector.get_connector_resource)"
+      ],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "Help on method get_connector_resource in module dataiku.connector.connector:\n\nget_connector_resource(self) unbound dataiku.connector.connector.Connector method\n    You may create a folder DATA_DIR/plugins/dev/\u003cplugin id\u003e/resource/\n    to hold resources useful fo your plugin, e.g. data files;\n    this method returns the path of this folder.\n    \n    This resource folder is meant to be read-only, and included in the .zip release of your plugin.\n    Do not put resources next to the connector.py or recipe.py.\n\n"
+        }
+      ]
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        ""
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Example: load a DSS dataset as a Pandas dataframe\nmydataset \u003d dataiku.Dataset(\"mydataset\")\nmydataset_df \u003d mydataset.get_dataframe()"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        ""
+      ],
+      "outputs": []
     }
-   ],
-   "source": [
-    "help(Connector.get_connector_resource)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Example: load a DSS dataset as a Pandas dataframe\n",
-    "mydataset = dataiku.Dataset(\"mydataset\")\n",
-    "mydataset_df = mydataset.get_dataframe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "creator": "admin",
-  "customFields": {},
-  "kernelspec": {
-   "display_name": "Python 2",
-   "language": "python",
-   "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.16"
-  },
-  "tags": []
- },
- "nbformat": 4,
- "nbformat_minor": 1
+  ]
 }
