--- a/ipython_notebooks/admin's Python notebook_5.ipynb
+++ b/ipython_notebooks/admin's Python notebook_5.ipynb
@@ -1,50 +1,66 @@
 {
   "metadata": {
     "kernelspec": {
+      "name": "python3",
       "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
+      "language": "python"
     },
     "creator": "admin",
     "createdOn": 1671046970529,
     "tags": [],
-    "customFields": {}
+    "customFields": {},
+    "hide_input": false,
+    "language_info": {
+      "name": "python",
+      "version": "3.6.8",
+      "mimetype": "text/x-python",
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "pygments_lexer": "ipython3",
+      "nbconvert_exporter": "python",
+      "file_extension": ".py"
+    },
+    "modifiedBy": "admin"
   },
   "nbformat": 4,
-  "nbformat_minor": 0,
+  "nbformat_minor": 1,
   "cells": [
     {
-      "execution_count": 0,
+      "execution_count": 1,
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "%pylab inline"
+        "from custom_functions import get_today"
       ],
       "outputs": []
+    },
+    {
+      "execution_count": 3,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "get_today()"
+      ],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "execution_count": 3,
+          "data": {
+            "text/plain": "datetime.date(2022, 12, 14)"
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "import dataiku\nfrom dataiku import pandasutils as pdu\nimport pandas as pd"
+        ""
       ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "# Example: load a DSS dataset as a Pandas dataframe\nmydataset \u003d dataiku.Dataset(\"mydataset\")\nmydataset_df \u003d mydataset.get_dataframe()"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [],
       "outputs": []
     }
   ]
