--- a/ipython_notebooks/admin's Python notebook_5.ipynb
+++ b/ipython_notebooks/admin's Python notebook_5.ipynb
@@ -1,8 +1,8 @@
 {
   "metadata": {
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3",
+      "name": "py-dku-venv-python2",
+      "display_name": "Python (env Python2)",
       "language": "python"
     },
     "creator": "admin",
@@ -28,7 +28,7 @@
   "nbformat_minor": 1,
   "cells": [
     {
-      "execution_count": 5,
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
       "source": [
@@ -37,22 +37,13 @@
       "outputs": []
     },
     {
-      "execution_count": 6,
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
       "source": [
         "get_today()"
       ],
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "execution_count": 6,
-          "data": {
-            "text/plain": "datetime.date(2022, 12, 14)"
-          },
-          "metadata": {}
-        }
-      ]
+      "outputs": []
     },
     {
       "execution_count": 0,
