Update git reference of the notebook:notebook editor for compute_python_out

--- a/ipython_notebooks/notebook editor for compute_python_out.ipynb
+++ b/ipython_notebooks/notebook editor for compute_python_out.ipynb
@@ -7,7 +7,13 @@
     },
     "associatedRecipe": "compute_python_out",
     "dkuGit": {
-      "lastInteraction": 0
+      "gitReference": {
+        "remote": "git@github.com:jacquelinedataiku/jupyter_notebook_examples.git",
+        "checkout": "master",
+        "remotePath": "notebook editor for compute_python_out.ipynb",
+        "isDirty": false
+      },
+      "lastInteraction": 1675698976934
     },
     "creationTag": {
       "versionNumber": 0,
