Update git reference of the notebook:notebook editor for compute_python_out

--- a/ipython_notebooks/notebook editor for compute_python_out.ipynb
+++ b/ipython_notebooks/notebook editor for compute_python_out.ipynb
@@ -9,11 +9,11 @@
     "dkuGit": {
       "gitReference": {
         "remote": "git@github.com:jacquelinedataiku/jupyter_notebook_examples.git",
-        "checkout": "master",
+        "checkout": "refs/heads/main",
         "remotePath": "notebook editor for compute_python_out.ipynb",
         "isDirty": false
       },
-      "lastInteraction": 1675698976934
+      "lastInteraction": 1675699059463
     },
     "creationTag": {
       "versionNumber": 0,
