Saved Jupyter notebook 'admin's Python notebook_5'

--- a/ipython_notebooks/admin's Python notebook_5.ipynb
+++ b/ipython_notebooks/admin's Python notebook_5.ipynb
@@ -1,8 +1,8 @@
 {
   "metadata": {
     "kernelspec": {
-      "name": "py-dku-venv-python2",
-      "display_name": "Python (env Python2)",
+      "name": "python3",
+      "display_name": "Python 3",
       "language": "python"
     },
     "creator": "admin",
